--- a/assignment/style.css
+++ b/assignment/style.css
@@ -11,9 +11,8 @@
 /* Change the font-family of your list */
 
 body{
-    background-color: black;
+    background-color: #D6F6DD;
     font-family: sans-serif;
-    padding: 20px;
 }
 
 img{
@@ -47,7 +46,7 @@ h2 {
 }
 .header{
     width: 80%;
-    background-color: burlywood;
+    background-color: #ACECF7;
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
@@ -65,10 +64,10 @@ h2 {
 }
 footer{
     width: 80%;
-    background-color: burlywood;
+    background-color: #ACECF7;
     margin-left: auto;
     margin-right: auto;
-    padding: 5px 20px;
+    padding: 10px 20px;
     max-width: 500px;
     font-size: 14px;
     text-align: center;
